chore: modified scripts
1. modified environ variable

2. added a script to cache poetry

3. updated checkout version to the latest

4. updated setup-python version to the latest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,30 @@
+name: Continuous Integration
+
 on:
   push:
 
-jobs:
-  ci:
-    runs-on: ubuntu-20.04
-    env:
-      DB_HOST: 127.0.0.1
-      DB_PORT: 3306
-      DB_USER: root
-      DB_PASSWORD: 1234
-      DB_DATABASE: oz_django
-    steps:
-      - name: Checkout the codes
-        uses: actions/checkout@v2
+env:
+  PYTHON_VERSION: "3.12"
+  POETRY_VERSION: "1.8.2"
+  POETRY_URL: https://install.python-poetry.org
+  DB_HOST: 127.0.0.1
+  DB_PORT: 3306
+  DB_USER: root
+  DB_PASSWORD: 1234
+  DB_DATABASE: oz_django
 
-      - name: Setup python environment
-        id: setup-python
-        uses: actions/setup-python@v2
+jobs:
+  CI:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.12
+          python-version: ${{ env.PYTHON_VERSION }}
+        id: setup-python
 
       - name: Set timezone to KST
         run: |
@@ -31,22 +37,25 @@ jobs:
           mysql -e "use mysql; FLUSH PRIVILEGES; ALTER USER '${{ env.DB_USER }}'@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';" -uroot -proot
           mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
 
-      - name: Cache dependencies
+      - name: Cache Poetry cache
         uses: actions/cache@v3
         with:
-          path: ~/.github/.cache/pypoetry
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-
+          path: ~/.cache/pypoetry
+          key: poetry-cache-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ env.POETRY_VERSION }}
 
-      - name: Install Poetry
+      - name: Cache Packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.local
+          key: poetry-local-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('.github/workflows/*.yml') }}
+
+      - name: Install Poetry ${{ env.POETRY_VERSION }}
         run: |
-          curl -sSL curl -sSL https://install.python-poetry.org | python3 -
-          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+          curl -sSL ${{ env.POETRY_URL }} | python - --version ${{ env.POETRY_VERSION }}
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install Dependencies
-        run: |
-          poetry install
+        run: poetry install
 
       - name: Run black
         run: |
@@ -59,9 +68,3 @@ jobs:
       - name: Run mypy
         run: |
           poetry run mypy .
-
-      - name: Run Test
-        run: |
-          poetry run coverage run manage.py test
-          poetry run coverage report -m
-          poetry run coverage html
