--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ tortoise-orm = {extras = ["asyncmy"], version = "^0.20.1"}
 aerich = "^0.7.2"
 cryptography = "^42.0.7"
 httpx = "^0.27.0"
+asgi-lifespan = "^2.1.0"
+sqlalchemy = "^2.0.30"
+greenlet = "^3.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
