--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ tortoise-orm = {extras = ["asyncmy"], version = "^0.20.1"}
 aerich = "^0.7.2"
 cryptography = "^42.0.7"
 httpx = "^0.27.0"
+broadcaster = "^0.2.0"
+asyncio-redis = "^0.16.0"
 
 
 [tool.poetry.group.dev.dependencies]
