--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ aerich = "^0.7.2"
 cryptography = "^42.0.7"
 httpx = "^0.27.0"
 broadcaster = "^0.2.0"
-asyncio-redis = "^0.16.0"
+redis = "^5.0.4"
 
 
 [tool.poetry.group.dev.dependencies]
