--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ aerich = "^0.7.2"
 cryptography = "^42.0.7"
 httpx = "^0.27.0"
 redis = "^5.0.4"
+fastapi-jwt-auth = "^0.5.0"
+python-jose = "^3.3.0"
+passlib = "^1.7.4"
+bcrypt = "3.1.7"
 
 
 [tool.poetry.group.dev.dependencies]
