--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ fastapi-jwt-auth = "^0.5.0"
 python-jose = "^3.3.0"
 passlib = "^1.7.4"
 bcrypt = "3.1.7"
+types-pytz = "^2024.1.0.20240417"
 
 
 [tool.poetry.group.dev.dependencies]
