--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python-jose = "^3.3.0"
 passlib = "^1.7.4"
 bcrypt = "3.1.7"
 types-pytz = "^2024.1.0.20240417"
+boto3 = "^1.34.115"
 
 
 [tool.poetry.group.dev.dependencies]
